--- a/apps/blog_web/assets/css/components/project.css
+++ b/apps/blog_web/assets/css/components/project.css
@@ -74,6 +74,11 @@
       display: flex;
       align-items: center;
       color: var(--color-fg-secondary);
+      flex-wrap: wrap;
+
+      & time {
+        white-space: nowrap;
+      }
       margin-block-start: var(--space-line);
 
       &>* {
